# flashlight

./: .eslintrc  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json
.github/workflows/: build.yml  release.yml
examples/: test.tsx
scripts/: build.sh  cargo-out-dir.sh  install.sh  ubuntu-install-packages.sh
src/: analysis.rs  analysis.ts  ast.ts  cli.ts  index.ts  logger.rs  main.rs  parser.rs  parser.ts  processor.rs  utils.rs  utils.ts  walker.ts
src/analysis/: imports.rs  mod.rs  tags.rs
src/reporters/: BaseReporter.ts  ConsoleReporter.ts  QuickfixReporter.ts  Reporter.ts  index.ts
src/utils/: ast.rs  mod.rs
tests/: integration_test.rs
