[package]
name = "flashlight"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
console = "0.15.7"
ignore = "0.4.20"
swc_common = "0.33.12"
swc_ecma_ast = "0.110.15"
swc_ecma_parser = "0.141.34"
swc_ecma_visit = "0.96.15"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
